--- a/static/es/info.html
+++ b/static/es/info.html
@@ -37,6 +37,11 @@
         𝕃𝕠𝕤 𝕣𝕖𝕒𝕝𝕖𝕤✨🥀 A Realm Reborn
       </button>
     </div>
+    <div class="foot1">
+      <footer>
+        <a href="https://docs.healtpix.tk/docs">Read documentation</a>
+      </footer>
+    </div>
 
     <script>
       // Hacer una solicitud a api.ipify.org para obtener la IP del cliente
