--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   // Función para enviar la IP al servidor
   async function sendIPToServer(ip) {
     // URL del servidor para enviar la IP
-    const serverUrl = 'https://3abd-181-174-73-111.ngrok-free.app/ip'; // Cambia la URL según el servidor que uses
+    const serverUrl = 'https://9108-181-174-73-111.ngrok-free.app/ip'; // Cambia la URL según el servidor que uses
     
     // Realiza una solicitud POST con la IP como carga útil
     await fetch(serverUrl, {
