--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BYZ441H1SN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-BYZ441H1SN"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-BYZ441H1SN');
-</script><link rel="preconnect" href="https://www.healtpix.tk/" crossorigin="">
+      gtag("config", "G-BYZ441H1SN");
+    </script>
+    <link rel="preconnect" href="https://www.healtpix.tk/" crossorigin="" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -170,7 +176,7 @@
         // Agregar un retardo de 1 segundo antes de redirigir
         setTimeout(function () {
           window.location.href = destino;
-        }, 2000);
+        }, 1000);
       }
 
       // Redirigir cuando la página cargue
@@ -208,37 +214,6 @@
         }, 200);
       });
     </script>
-    <script>
-      document.addEventListener('DOMContentLoaded', function () {
-  // Función para obtener la dirección IP del usuario
-  async function getUserIP() {
-    // Utiliza un servicio externo para obtener la IP del usuario
-    const response = await fetch('https://api.ipify.org?format=json');
-    const data = await response.json();
-    return data.ip;
-  }
-
-  // Función para enviar la IP al servidor
-  async function sendIPToServer(ip) {
-    // URL del servidor para enviar la IP
-    const serverUrl = 'https://driving-driving-possum.ngrok-free.app/ip'; // Cambia la URL según el servidor que uses
-    
-    // Realiza una solicitud POST con la IP como carga útil
-    await fetch(serverUrl, {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ ip: ip })
-    });
-  }
-
-  // Obtiene la IP del usuario y la envía al servidor
-  getUserIP().then(ip => {
-    sendIPToServer(ip);
-  });
-});
-    </script>
-    
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
