--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       gtag("config", "G-BYZ441H1SN");
     </script>
     <link rel="preconnect" href="https://www.healtpix.tk/" crossorigin="" />
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirigiendo</title>
@@ -176,13 +175,14 @@
         // Agregar un retardo de 1 segundo antes de redirigir
         setTimeout(function () {
           window.location.href = destino;
-        }, 800);
+        }, 1000);
       }
 
       
     </script>
   </head>
   <body>
+    <div id="toastContainer" style="position: fixed; top: 10px; right: 10px;"></div>
     <div class="container">
       <div class="ring"></div>
       <div class="ring"></div>
@@ -199,7 +199,7 @@
               loadingText.textContent = "言語を読み込んでいます...";
               break;
             case "es":
-              loadingText.textContent = "Cargando idioma...";
+              loadingText.textContent = "Cargando idioma y otros recursos...";
               break;
             case "pt":
               loadingText.textContent = "Carregando idioma...";
